k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: endhunger
  labels:
    name: endhunger
