k8s-manifests/service.yaml
apiVersion: apps/v1
kind: Service
metdata:
  name: endhunger-service
  namespace: endhunger
spec:
  type: NodePort
  selector:
    app: endhunger
  ports:
   - port: 80
     targetPort: 80
